--- a/.classpath
+++ b/.classpath
@@ -6,11 +6,11 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Game/lib/lwjgl-2.9.0/native/windows"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/workspace/Game/lib/lwjgl-2.9.0/jar/lwjgl.jar">
+	<classpathentry kind="lib" path="Z:/git/Game/lib/lwjgl-2.9.0/jar/lwjgl.jar">
 		<attributes>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="D:/workspace/Game/lib/lwjgl-2.9.0/native/windows"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/workspace/Game/lib/lwjgl-2.9.0/jar/lwjgl_util.jar"/>
+	<classpathentry kind="lib" path="Z:/git/Game/lib/lwjgl-2.9.0/jar/lwjgl_util.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
